fix methods in class InMemoryHistoryManager use interface Map and List instead of HashMap and ArrayList